# cloudy

./: .gitignore  AGENTS.md  README.md  build-story.html  start.sh  todo.md
apps/api/: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  railway.worker.json  tsconfig.json
apps/bridge/: .env.example  .gitignore  README.md  package.json
apps/memory/: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  pyproject.toml  railway.json
apps/memory/cloudy_memory/: __init__.py  app.py  auth.py  backend.py  locks.py  ontology.py  schemas.py  settings.py
apps/memory/tests/: test_app.py  test_backend.py  test_neo4j_integration.py
apps/pod/: .env  .env.example  .gitignore  pyproject.toml
apps/pod/cloudy_pod/: __init__.py  app.py  audio.py  client.py  hardware.py  worker.py
apps/pod/deploy/: cloudy-pod-spi.conf  cloudy-pod.service  podex-pod.service  provision-inmp441.sh
apps/pod/podex_pod/: __init__.py  app.py  audio.py  client.py  storage.py  worker.py
apps/pod/tests/: test_pod.py
apps/web/: .env.example  .gitignore  README.md  components.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.json
docs/: auth-setup.md  features.md  pod-deployment.md  pod-development.md  product.md  railway.md  techstack.md
scripts/: check-n8n-workflow.mjs  check-pod-arm.sh  check.sh  deploy-pod.sh  dev.sh  local.sh  run-ngrok.sh  setup.sh  start-memory.sh
supabase/: config.toml
supabase/migrations/: 20260719000000_pod_vertical_slice.sql  20260719010000_provider_connections.sql  20260719020000_ai_settings.sql  20260719030000_ai_provider.sql  20260719040000_adaptive_ping_rules.sql  20260719050000_automations.sql  20260719060000_atomic_connection_writes.sql  20260719070000_codex_sessions.sql  20260719080000_dynamic_ping_engine.sql  20260719081000_validate_runtime_worker.sql  20260720000000_linear_stripe_connections.sql  20260720010000_pod_screen_layout.sql  20260720020000_agent_memories.sql  20260720030000_single_feed_screens.sql  20260720040000_google_calendar_connections.sql  20260720050000_reply_personalization.sql  20260721000000_cloudy_rebrand.sql  (+9 more)
(+180 files in other folders)
