[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cloudy-memory"
version = "0.1.0"
requires-python = ">=3.13,<4"
dependencies = [
  "fastapi==0.139.2",
  "graphiti-core==0.29.2",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pyright==1.1.411",
  "pytest==9.1.1",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["cloudy_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires the local Neo4j service"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
include = ["cloudy_memory", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
