[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podex-pod"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "gpiozero==2.0.1",
  "pygame-ce==2.5.7",
]

[project.scripts]
podex-pod = "podex_pod.app:main"

[tool.setuptools.packages.find]
include = ["podex_pod*"]

[tool.setuptools.package-data]
podex_pod = ["fonts/*"]
