[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudy-pod"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "gpiozero==2.0.1",
  "pygame-ce==2.5.7",
]

[project.scripts]
cloudy-pod = "cloudy_pod.app:main"

[tool.setuptools.packages.find]
include = ["cloudy_pod*"]

[tool.setuptools.package-data]
cloudy_pod = ["fonts/*"]
